Field/Dropdown [FIX] Variabilized z-index that is higher than 2...

--- a/scss/core/elements/_field.scss
+++ b/scss/core/elements/_field.scss
@@ -208,7 +208,7 @@
 	@extend %lui_unstyled_list;
 	@include lui_raised(2);
 	position: absolute;
-	z-index: 2;
+	z-index: luiTheme(element, field, dropdown, z-index);
 	top: 100%;
 	left: 0;
 
